src/OpenCvSharpExtern/cuda_imgproc.h

//

// HoughCirclesDetector
CVAPI(cv::Ptr<HoughCirclesDetector>*) cuda_imgproc_createHoughCirclesDetector(float dp, float minDist, int cannyThreshold, int votesThreshold, int minRadius, int maxRadius, int maxCircles)
{
	cv::Ptr<HoughCirclesDetector> ptr = cv::cuda::createHoughCirclesDetector(dp, minDist, cannyThreshold, votesThreshold, minRadius, maxRadius, maxCircles);
	return new cv::Ptr<HoughCirclesDetector>(ptr);
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_detect(HoughCirclesDetector* obj, cv::_InputArray* src, cv::_OutputArray* circles, Stream* stream)
{
	obj->detect(*src, *circles, *stream);
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_downloadResults(HoughCirclesDetector* obj, cv::_InputArray* _d_circles, std::vector<cv::Vec3f>* c_circles, Stream* stream)
{
	GpuMat d_circles = _d_circles->getGpuMat();
	if (*stream)
		d_circles.download(*c_circles, *stream);
	else
		d_circles.download(*c_circles);
}
CVAPI(void) cuda_imgproc_Ptr_HoughCirclesDetector_delete(cv::Ptr<HoughCirclesDetector>* obj)
{
	delete obj;
}
CVAPI(HoughCirclesDetector*) cuda_imgproc_Ptr_HoughCirclesDetector_get(cv::Ptr<HoughCirclesDetector>* ptr)
{
	return ptr->get();
}
CVAPI(float) cuda_imgproc_HoughCirclesDetector_getDp(HoughCirclesDetector* ptr)
{
	return ptr->getDp();
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_setDp(HoughCirclesDetector* ptr, float dp)
{
	ptr->setDp(dp);
}
CVAPI(float) cuda_imgproc_HoughCirclesDetector_getMinDist(HoughCirclesDetector* ptr)
{
	return ptr->getMinDist();
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_setMinDist(HoughCirclesDetector* ptr, float minDist)
{
	ptr->setMinDist(minDist);
}
CVAPI(int) cuda_imgproc_HoughCirclesDetector_getCannyThreshold(HoughCirclesDetector* ptr)
{
	return ptr->getCannyThreshold();
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_setCannyThreshold(HoughCirclesDetector* ptr, int cannyThreshold)
{
	ptr->setCannyThreshold(cannyThreshold);
}
CVAPI(int) cuda_imgproc_HoughCirclesDetector_getVotesThreshold(HoughCirclesDetector* ptr)
{
	return ptr->getVotesThreshold();
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_setVotesThreshold(HoughCirclesDetector* ptr, int votesThreshold)
{
	ptr->setVotesThreshold(votesThreshold);
}
CVAPI(int) cuda_imgproc_HoughCirclesDetector_getMinRadius(HoughCirclesDetector* ptr)
{
	return ptr->getMinRadius();
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_setMinRadius(HoughCirclesDetector* ptr, int minRadius)
{
	ptr->setMinRadius(minRadius);
}
CVAPI(int) cuda_imgproc_HoughCirclesDetector_getMaxRadius(HoughCirclesDetector* ptr)
{
	return ptr->getMaxRadius();
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_setMaxRadius(HoughCirclesDetector* ptr, int maxRadius)
{
	ptr->setMaxRadius(maxRadius);
}
CVAPI(int) cuda_imgproc_HoughCirclesDetector_getMaxCircles(HoughCirclesDetector* ptr)
{
	return ptr->getMaxCircles();
}
CVAPI(void) cuda_imgproc_HoughCirclesDetector_setMaxCircles(HoughCirclesDetector* ptr, int maxCircles)
{
	ptr->setMaxCircles(maxCircles);
}