src/OpenCvSharp/PInvoke/cuda/NativeMethods_cuda_imgproc.cs


        //HoughCircles
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr cuda_imgproc_createHoughCirclesDetector(float dp, float minDist, int cannyThreshold, int votesThreshold, int minRadius, int maxRadius, int maxCircles);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_detect(IntPtr self, IntPtr src, IntPtr circles, IntPtr stream);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_Ptr_HoughCirclesDetector_delete(IntPtr obj);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_downloadResults(IntPtr obj, IntPtr d_circles, IntPtr c_circles, IntPtr stream);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr cuda_imgproc_Ptr_HoughCirclesDetector_get(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cuda_imgproc_HoughCirclesDetector_getDp(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_setDp(IntPtr ptr, float dp);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cuda_imgproc_HoughCirclesDetector_getMinDist(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_setMinDist(IntPtr ptr, float minDist);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cuda_imgproc_HoughCirclesDetector_getCannyThreshold(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_setCannyThreshold(IntPtr ptr, int cannyThreshold);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cuda_imgproc_HoughCirclesDetector_getVotesThreshold(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_setVotesThreshold(IntPtr ptr, int votesThreshold);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cuda_imgproc_HoughCirclesDetector_getMinRadius(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_setMinRadius(IntPtr ptr, int minRadius);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cuda_imgproc_HoughCirclesDetector_getMaxRadius(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_setMaxRadius(IntPtr ptr, int maxRadius);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cuda_imgproc_HoughCirclesDetector_getMaxCircles(IntPtr ptr);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cuda_imgproc_HoughCirclesDetector_setMaxCircles(IntPtr ptr, int maxCircles);

    }

}
#endif